# ScrapingItemImageFromMercari

./: Config.py  README.md  pyproject.toml  scrape_from_merukari.py  urls.txt
