[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["akio yonamine <43339576+yonaimineakio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.15.2"
tqdm = "^4.66.1"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
